# etcd-compass

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  biome.json  index.html  lefthook.yml  package-lock.json  package.json  sonar-project.properties  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
e2e/: connection-flow.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  key-browsing.spec.ts  playwright.config.ts  smoke.spec.ts
scripts/: convert-junit-to-sonar.cjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_error.rs  config.rs  etcd.rs  integration_tests.rs  main.rs  stress_tests.rs  test_helpers.rs
src/app/: App.css  App.tsx  AppShell.test.tsx  AppShell.tsx
src/commands/: auth.ts  cluster.ts  config.ts  connection.ts  keys.ts  lease.ts  native.ts  types.ts  watch.ts
src/components/ui/: button.tsx  card.tsx  resizable.tsx  sidebar.tsx  tabs.tsx
src/features/auth/: AuthPage.test.tsx  AuthPage.tsx  AuthStatusCard.test.tsx  AuthStatusCard.tsx  RolesTab.test.tsx  RolesTab.tsx  UsersTab.test.tsx  UsersTab.tsx  auth-store.test.ts  auth-store.ts  index.test.ts  index.ts
src/features/cluster/: ClusterSidebar.regression.test.tsx  ClusterSidebar.test.tsx  ClusterSidebar.tsx  ClusterStatus.tsx  MetricsDashboard.tsx  cluster-store.regression.test.ts  cluster-store.ts
src/features/connections/: ConnectionForm.tsx  ConnectionManager.tsx  connection-schema.ts  connection-store.test.ts  connection-store.ts
src/features/keys/: AddKeyDialog.test.tsx  AddKeyDialog.tsx  BulkActionsToolbar.tsx  BulkDeleteDialog.tsx  DeleteKeyDialog.test.tsx  DeleteKeyDialog.tsx  EditKeyDialog.tsx  ExportDialog.tsx  FlatView.test.tsx  FlatView.tsx  ImportPreviewDialog.tsx  JsonViewer.tsx  KeyBrowser.tsx  KeyDetail.tsx  QueryBar.test.tsx  QueryBar.tsx  TreeView.tsx  (+6 more)
src/lib/: utils.ts
src/scripts/: convert-junit-to-sonar.test.ts
src/shared/: constants.regression.test.ts  constants.ts
src/test/: convert-junit-to-sonar.test.ts  setup.ts
(+18 files in other folders)
