[package]
name = "etcd-compass"
version = "1.0.0"
description = "ETCD Compass - A modern desktop client for managing ETCD clusters"
authors = ["kazuma-desu"]
license = "MIT"
repository = "https://github.com/kazuma-desu/etcd-compass"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
etcd-client = { version = "0.18", features = ["tls", "tls-roots"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
once_cell = "1.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
